@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.27 2012/03/14 14:49:06 plunky Exp $
+# $NetBSD: Makefile,v 1.28 2012/07/01 07:21:35 plunky Exp $
 #
 
-DISTNAME=	zyGrib-5.1.4
+DISTNAME=	zyGrib-6.0.0
 CATEGORIES=	misc
 MASTER_SITES=	http://www.zygrib.org/getfile.php?file=
 EXTRACT_SUFX=	.tgz
