@@ -1,8 +1,8 @@
-$NetBSD: distinfo,v 1.14 2012/06/15 18:56:57 joerg Exp $
+$NetBSD: distinfo,v 1.15 2012/07/01 07:21:35 plunky Exp $
 
-SHA1 (zyGrib-5.1.4.tgz) = 3a4fe888af4f65b89d10098111c2605140a575c6
-RMD160 (zyGrib-5.1.4.tgz) = 93b201c23e79404bc1d60bae2219a36d9091d443
-Size (zyGrib-5.1.4.tgz) = 17208231 bytes
+SHA1 (zyGrib-6.0.0.tgz) = 7fdf4dd5780731344763f1ecc2aac645673e359c
+RMD160 (zyGrib-6.0.0.tgz) = c6bb16375c6e01c39a71a4dc24a814da5747b6e0
+Size (zyGrib-6.0.0.tgz) = 17239864 bytes
 SHA1 (patch-Terrain.cpp) = 83a2f54cebd466918ab1267f1c1d94ec0d88d8a4
 SHA1 (patch-aa) = c56e9e8b3621d7b41a259bcf872f1707b8c164b6
 SHA1 (patch-ab) = 7b9abde8a75ce0ebe5e2e35003041b827524af9f
