@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.2623 2012/08/18 06:58:52 ryoon Exp $
+$NetBSD: CHANGES-2012,v 1.2624 2012/08/18 16:35:06 chs Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -4063,3 +4063,4 @@ Changes to the packages collection and infrastructure in 2012:
 	Removed emulators/suse113_slang [chs 2012-08-18]
 	Removed emulators/suse113_x11 [chs 2012-08-18]
 	Removed meta-pkgs/suse113 [chs 2012-08-18]
+	Updated misc/zyGrib to 6.0.0 [plunky 2012-08-18]
